--- a/neo4j/v4.x.x/Dockerfile
+++ b/neo4j/v4.x.x/Dockerfile
@@ -29,7 +29,7 @@ EXPOSE 7474 7473 7687
 COPY wrapper.sh wrapper.sh
 RUN chmod +x wrapper.sh
 
-# Copy import file(s)
-COPY ./__seed__/*.cypher /var/lib/neo4j/import/
+## If you would like to copy Cypher file(s) for import, please uncomment the line below
+# COPY ./__seed__/*.cypher /var/lib/neo4j/import/
 
 ENTRYPOINT ["./wrapper.sh"]
